--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -8,19 +8,19 @@
 
     <Button
         android:id="@+id/buttonGetLocation"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:text="Get Location Info" />
 
     <TextView
         android:id="@+id/LocationText"
-        android:text="Location:"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/buttonGetLocation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonGetLocation"
+        android:layout_marginTop="10dp"
+        android:text="Location:" />
 
     <TextView
         android:id="@+id/CityText"
@@ -37,6 +37,20 @@
         android:layout_below="@+id/CityText"
         android:layout_marginTop="5dp"
         android:text="Postal:" />
+
+    <Button
+        android:id="@+id/messenger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PostalText"
+        android:layout_alignBottom="@+id/PostalText"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="465dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginBottom="-513dp"
+        android:text="Messenger" />
 
 
 </RelativeLayout>
