--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -1,39 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LocationActivity">
 
-    <EditText
-        android:id="@+id/EditText1"
-        style="@style/Widget.AppCompat.EditText"
-        android:layout_width="241dp"
-        android:layout_height="40dp"
-        android:layout_alignBottom="@+id/Send"
-        android:layout_marginBottom="4dp"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:outlineProvider="background"
-        android:singleLine="false"
-        android:text="" />
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:isScrollContainer="false">
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="552dp"
-        android:layout_alignBottom="@+id/Send"
         android:layout_marginBottom="137dp" />
+    </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true">
+
+        <EditText
+            android:id="@+id/EditText1"
+            style="@style/Widget.AppCompat.EditText"
+            android:layout_width="325sp"
+            android:layout_height="40dp"
+            android:layout_alignBottom="@+id/Send"
+            android:layout_marginBottom="4dp"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:outlineProvider="background"
+            android:singleLine="false"
+            android:text="" />
 
     <Button
         android:id="@+id/Send"
-        android:layout_width="393dp"
-        android:layout_height="252dp"
-        android:layout_marginStart="246dp"
-        android:layout_marginTop="633dp"
-        android:layout_marginBottom="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:text="Send" />
-
+    </RelativeLayout>
 
 </RelativeLayout>
