--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="Black">#000000</color>
+    <color name="Snow">#FFFAFA</color>
+    <color name="RoyalBlue">#4169E1</color>
+    <color name="DarkBlue">#00008B</color>
+    <color name="LightBlue">#ADD8E6</color>
 </resources>
