--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationActivity">
+    tools:context=".LocationActivity"
+    android:background="@color/LightBlue">
 
 
     <Button
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:background="@color/Snow"
         android:text="Get Location Info" />
 
     <TextView
@@ -79,6 +81,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="156dp"
         android:layout_marginTop="221dp"
+        android:background="@color/Snow"
         android:layout_marginEnd="149dp"
         android:layout_marginBottom="-269dp"
         android:text="Messenger" />
@@ -91,6 +94,7 @@
         android:layout_marginStart="141dp"
         android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/buttonGetLocation"
+        android:background="@color/Snow"
         android:text="SignOut" />
 
 
