--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -84,6 +84,7 @@
         android:layout_width="143dp"
         android:layout_height="52dp"
         android:layout_marginTop="8dp"
+        android:background="@color/LightBlue"
         android:text="@string/login_button"
         app:layout_constraintEnd_toEndOf="@+id/login_password_editText"
         app:layout_constraintHorizontal_bias="0.496"
