--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -39,7 +39,8 @@
             android:id="@+id/Send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="320dp"
             android:layout_alignParentBottom="true"
             android:background="@color/Snow"
             android:text="Send" />
