--- a/app/src/main/res/layout/email_authentication_activity.xml
+++ b/app/src/main/res/layout/email_authentication_activity.xml
@@ -97,9 +97,8 @@
         android:text="@string/register_button"
         app:layout_constraintEnd_toEndOf="@+id/password_text_box"
         app:layout_constraintStart_toStartOf="@+id/password_text_box"
-        app:layout_constraintTop_toBottomOf="@+id/password_text_box"
 
-        />
+        app:layout_constraintTop_toBottomOf="@+id/password_text_box" />
 
     <TextView
         android:id="@+id/sign_in_link"
