--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/LightBlue"
     tools:context=".LocationActivity">
 
     <ScrollView
@@ -12,15 +13,18 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="552dp"
-        android:layout_marginBottom="137dp" />
+        android:textColor="@color/Black"
+        android:layout_gravity="bottom|left"
+        android:layout_height="match_parent"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="55dp"
+        android:background="@color/LightBlue"/>
     </ScrollView>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:background="@color/LightBlue">
+        android:layout_alignParentBottom="true">
 
         <EditText
             android:id="@+id/EditText1"
@@ -31,7 +35,6 @@
             android:layout_marginBottom="4dp"
             android:importantForAutofill="no"
             android:inputType="text"
-            android:outlineProvider="background"
             android:singleLine="false"
             android:text="" />
 
