--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -29,10 +29,10 @@
         <EditText
             android:id="@+id/EditText1"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="325sp"
-            android:layout_height="40dp"
+            android:layout_width="318dp"
+            android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/Send"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="-1dp"
             android:importantForAutofill="no"
             android:inputType="text"
             android:singleLine="false"
